--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "react-apexcharts": "^1.7.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-redux": "^9.2.0",
+    "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4"
   },
